# membru.acspa.ro

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  next.config.js  package-lock.json  package.json  renovate.json  tailwind.config.js  tsconfig.json
.sqlx/: query-01e52f835a5b7069456b7879c0a41f4ced906fbbf4d38a74797103ffb50c9e38.json  query-0459de76085a09af5333ace68a3741395cf0c9c0b99b528993763c2159481fa8.json  query-05050cf238a8705041977eabdde69637d5343d0aa571f123c147389cdb031120.json  query-059b9527d601ec5cca1bc8f17754782ef8175a8237fba0de9bb097831df1c5e6.json  query-0679ff941ab232631c26f134a04eb6ba77d19114266de5d8dd8f512553e363d5.json  query-08196fc16b146c4b47c1777112cc7840bdc7fbc18712e40657ab7694e79d6617.json  query-08c56818d25432d23b04d58bf257620fd367fa3489b0efb5c93fa6dfb562969b.json  query-09cf522b5214516fbad37a87aca6e876615a9497d89115e3d88d5f8d53c265c2.json  query-0ad7d626f457ae55ec06651724c2d0f3ddb6c9e0ff63d2378d982c282819da74.json  query-0c63a38738d28d890f13ada7953f0a8781898f880906873a519f2afd5d0a0e7a.json  query-0cfcad111d66f8a81e8b88891d595b1658c36b334232ca7dc4d83829448f24ea.json  query-13ea5a24e0f3bb575eb7add4aa1beb5cb1c4a95ae6bf7aa9b5cc42f81002bb14.json  query-19d96f3aeeefd88e86e30b52de4527f49a48c6f0ae40997bca1c998ab0ecd3a0.json  query-19f4f4e59b0dabd7c5652d17e395d32041d76f16db9b61b395a3e0903551a113.json  query-1e29dee5a1d6ff5d82c665305ab965662aa62fe0f3061c14317cf7a35815d5c2.json  query-20919cdda8d7282041fc186560e65f8d512fd023793ce187fec207614109188e.json  query-228c3ab4557b8ee5e5792456a3e9accc2ff77fed06bb6bfbad1faf08fca8d814.json  query-22ed04dddd30b56e178c3b46eb91ce21e2b0f37e5095a6f73a793a1e8ffbc3be.json  query-23ba9cef9337362719408aa7a5b620807fa7be0084345b1dfa2f8f04627e85dc.json  query-23f4eb8e3b3514d865702ccdbb029852b99f02fee5f6847deed318f6f929ebf9.json  query-25168f1f2b99d2f004bbb49bf473573a885a705a17275f54daf3f5c246fc6aa6.json  query-2582985193ae7171dae034c9cdc93598c556caf20a5636c67474c4352650ae80.json  query-25f7ad4e629b86a43ad0fcae72da59bf2f44d6c240ecdefe608d10e6d93dd9da.json  query-2e0bb3b873ba2625d3d510c9cc9994bef064103ec72d0b7d1aeb24f51f72594b.json  query-3062c5b3f5651e1c113a3a8ca016056cb4a1948192cc8085ee81dfdf5c372133.json  query-34ababa470fd7807f35447e8ab91ffdaf7cff38fb16422fc62bf2a811401360c.json  query-34baa545d5db19f4afddb983cd8496b20c74a97da830e21216ef7ee03c409ddf.json  query-3606add770d8131e7306f8124ffa95d4e28a6359dd61b08bda8e224eee864504.json  query-36b6185ef8202b734e7c8c7b6a4c9cf86d16110ba99604efcf8ec3cd732bee42.json  query-3767777cde0e7a7e94a2c2c426edae01f73ae08d05cf1e23375bcd98dcf07b22.json  query-37a87b0375dab8e21063ed5a3dc2c5037e4311c8638dcebcf5d5b60f35d96445.json  query-3810b0153bf5b7c0b9ce6508a9a2c836eaa870f290776ff4b85e87d20b95892a.json  query-3905aa730b98bc506174b6bf998ab3ac7cdf7135ca44e4c4c6d8d7c904363e76.json  query-398dfaab24b604603b13f01c3e28843795b2cfe5515a44b286a7d366f6d83d15.json  query-39d3dc8e7e826d63290eb008ed23bf87602a72aa66302a37cea671355cfeb9eb.json  query-3d1a6101e3d07c92194fe655fb765ab4aa34b977a1812f78ef8b70ca05a87e6a.json  query-3ff77a61b1ec880142b6956fa6d4b1e5ac0c0878b5667bbf5a1979fbd7fb63fb.json  query-3ffd87a811e8de5a84c42ce87caededf9a88032c04cd36677035d0244c6e2cbe.json  query-4077affa0fdd2b8d40c3ba3eabfe9788971b43a10bb30f7396021a05a288e9df.json  query-425e742d03a8f6aa59e403413d00306ebcb92a6e03c8f2ab1f07ad3a17fd78b6.json  (+163 more)
assets/: manifest.json
cloud/: appwrite.json
hooks/: useExitIfNotFounder.ts  useFreeDaysQuery.ts  useGlobalVars.ts  useGuestsQuery.ts  useMemberRolesQuery.ts  useProfileData.tsx  useProfilesQuery.ts  useRestrictionsQuery.ts
migrations/: 20240616205653_init.sql  20240616205653_tables.sql  20240622161519_data.sql  20240622161519_init_data.sql  20240921075743_add_user_dates.sql  20241121170235_alternative_days.sql  20241213130701_remove_waiting_capacity.sql  (+7 more)
src/: db.rs  (+1 more)
(+241 files in other folders)
