[package]
name = "acspa"
version = "2.1.1"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# Axum
axum = { version = "0.7", features = ["ws"] }
tower = "0.5.1"
tower-http = { version = "0.6", features = ["trace", "timeout", "fs", "catch-panic"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum-login = "0.16"

sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "time"] }
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15.7"
validator = { version = "0.18.1", features = ["derive"] }
anyhow = "1"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
strum = { version = "0.26", features = ["derive"] }

# Crypto
argon2 = { version = "0.5", features = ["std"] }
rand_hc = "0.3.2"

[profile.dev.package.askama_derive]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3
