[package]
name = "acspa"
version = "2.6.0"
edition = "2024"

[dependencies]
# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# Axum
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "fs", "catch-panic"] }
askama = { version = "0.14" }
axum-login = "0.18"
axum-extra = { version = "0.12", default-features = false, features = ["form"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "time"] }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
dotenvy = "0.15"
email_address = "0.2"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
itertools = "0.14"
argon2 = { version = "=0.6.0-rc.5" }

[profile.dev.package.askama_derive]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3
